--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
   font-family: "Jost", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
